# RemoteArena

./: .gitignore  install.sh  readme.MD
arena_control/: .gitignore  readme.MD
arena_control/relays_controller/: Makefile  relays_controller.ino
arena_control/relays_controller_server/: relays_controller_server.ino
catkin_ws/: .gitignore
catkin_ws/src/: .gitignore
catkin_ws/src/arena_camera/: CMakeLists.txt  package.xml  readme.MD
catkin_ws/src/arena_control/: .gitignore  CMakeLists.txt  package.xml  readme.MD
catkin_ws/src/arena_control/arduino_firmware/: .gitignore  Makefile  readme.MD  relays_controller_server.ino
catkin_ws/src/arena_control/assets/: .gitignore
catkin_ws/src/arena_control/assets/params/: .gitignore  relays.yaml
catkin_ws/src/arena_control/assets/visualization/: .gitignore  config_plot_pid.xml
catkin_ws/src/arena_control/include/arena_control/: .gitignore
catkin_ws/src/arena_control/include/arena_control/ros_lib/: .gitignore
catkin_ws/src/arena_control/include/arena_control/ros_lib/arena_control/: control_lights.h
catkin_ws/src/arena_control/launch/: .gitignore  hardware.launch  hardware_test.launch
catkin_ws/src/arena_control/src/: .gitignore  arena_camera_node.cpp
catkin_ws/src/arena_control/srv/: .gitignore  LightBulbsControl.srv  RobotChargersControl.srv  control_chargers.srv  control_lights.srv
catkin_ws/src/arena_mapping/: .gitignore  CMakeLists.txt  package.xml  readme.MD
catkin_ws/src/arena_mapping/assets/: .gitignore
catkin_ws/src/arena_mapping/assets/images/: .gitignore
catkin_ws/src/arena_mapping/assets/maps/: .gitignore  arena_map.yaml
catkin_ws/src/arena_mapping/assets/params/: .gitignore  hsv_config.yaml
catkin_ws/src/arena_mapping/assets/rviz_visualization/: .gitignore  config_file.rviz
catkin_ws/src/arena_mapping/assets/urdf/: minibot.urdf
catkin_ws/src/arena_mapping/assets/visualization/: .gitignore  config_plot.xml  config_plot_profiles.xml  config_simulator.rviz  config_visualization.rviz  config_visualization_test.rviz
catkin_ws/src/arena_mapping/launch/: .gitignore  arena_mapping_simul.launch  arena_simul_real_robot.launch  color_calibrator.launch  demo_simul.launch  startup.launch  startup_simul.launch  startup_simul_test.launch
catkin_ws/src/arena_mapping/scripts/: .gitignore  arena_simul_markers.py  aruco_detector.py  obstacles_color_calibrator.py  obstacles_color_detector.py  obstacles_detector.py
catkin_ws/src/arena_mapping/src/: .gitignore  mobile_base_node_simul.cpp
catkin_ws/src/arena_web_server/: .gitignore  CMakeLists.txt  package.xml
catkin_ws/src/arena_web_server/launch/: demo.launch  demo_simul.launch  web_server_real_simul.launch  web_server_simul.launch  web_simul.launch
catkin_ws/src/arena_web_server/scripts/: .gitignore  controller.py  models.py  web_controller.py  web_server_node.py
catkin_ws/src/arena_web_server/scripts/services/: .gitignore  Data.py  ROS.py  User.py
catkin_ws/src/arena_web_server/templates/: .gitignore  fileManager.html  home.html  index.html  login.html  userManager.html  viewer.html
catkin_ws/src/arena_web_server/templates/static/: .gitignore  script.js  styles.css
catkin_ws/src/mobile_base/: .gitignore  CMakeLists.txt
catkin_ws/src/mobile_base/assets/: .gitignore
catkin_ws/src/mobile_base/assets/params/: .gitignore
catkin_ws/src/mobile_base/include/mobile_base/: .gitignore  profiles.h
catkin_ws/src/mobile_base/launch/: .gitignore  bring_up_base.launch  bring_up_base_simul.launch
catkin_ws/src/mobile_base/src/: .gitignore  mobile_base_node_simul.cpp  move_minibot_node_simul.cpp
catkin_ws/src/robot_simulator/: .gitignore
catkin_ws/src/robot_simulator/hardware/: CMakeLists.txt
catkin_ws/src/robot_simulator/hardware/include/: .gitignore
catkin_ws/src/robot_simulator/hardware/launch/: .gitignore  hardware_simul.launch
catkin_ws/src/robot_simulator/hardware/src/: laser_scan_node.cpp
catkin_ws/src/robot_simulator/mobile_base/launch/: mobile_base_simul.launch
catkin_ws/src/robot_simulator/mobile_base/src/: mobile_base_node.cpp  simple_move_node.cpp
catkin_ws/src/robot_simulator/motion_planner/launch/: motion_planner_simul.launch
catkin_ws/src/robot_simulator/motion_planner/params/: motion.yaml  motion_parameters.yaml
catkin_ws/src/robot_simulator/motion_planner/src/: motion_planner_node.cpp
catkin_ws/src/robot_simulator/motion_planner/state_machines/: light_follower.h
catkin_ws/src/simulator_physics/: .gitignore
catkin_ws/src/simulator_physics/hardware/: .gitignore  CMakeLists.txt  package.xml
catkin_ws/src/simulator_physics/hardware/launch/: .gitignore  startup.launch
catkin_ws/src/simulator_physics/hardware/params/: .gitignore
catkin_ws/src/simulator_physics/hardware/src/: .gitignore  laser_scan_node.cpp  light_sensors_node.cpp
catkin_ws/src/simulator_physics/hardware/srv/: .gitignore
catkin_ws/src/simulator_physics/mobile_base/: CMakeLists.txt
catkin_ws/src/simulator_physics/mobile_base/launch/: .gitignore  (+2 more)
catkin_ws/src/simulator_physics/motion_planner/: .gitignore  CMakeLists.txt  package.xml
(+33 files in other folders)
